[package]
name = "req_it"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A graphical multi-tab HTTP client"
readme = "README.md"
repository = "https://github.com/coruscateor/req_it"
homepage = "https://coruscateor.com/projects/req-it"
keywords = ["HTTP", "client", "GraphQL", "user", "interface"]
categories = ["web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk_estate = { path="../gtk_estate", features = ["adw"] } #Do not remove
gtk_estate = { version = "0.3.0", features = ["adw", "gtk_v4_14"] }
reqwest = { version = "0.11.*", features = [ "json" ] }
act_rs = { path="../act_rs", features = ["tokio"] } #Do not remove
#act_rs = "0.1.0"
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "sync", "macros"] }
#async-trait = "0.1.*"
paste = "1.0.*"
#corlib_local = { path="../corlib" }
corlib = { path="../corlib" }
#pretty_goodness = { path="../pretty_goodness" } #Do not remove
pretty_goodness = "0.1.0"
serde_json = "1.0.95"

fastwebsockets = { version = "0.8.*", features = ["upgrade"] }

hyper = "1.*"

http-body-util = "0.1.*"

anyhow = "1.0.*"

hyper-util = { version = "0.1.*", features = ["tokio"] }

bytes = "1.6.0"

delegate = "0.*"

url = "2.5.*"


